<?xml version="1.0" encoding="UTF-8"?>
<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>fr.polytech.team.h</groupId>
  <artifactId>DroneDelivery</artifactId>
  <version>1.0</version>

    <properties>
        <versions.java>1.8</versions.java>
        <versions.maven-compiler>3.8.0</versions.maven-compiler>
        <versions.json>20160810</versions.json>
        <!-- J2E 7.x technological stack -->
        <versions.javaee>7.0-1</versions.javaee>
        <versions.openejb>7.0.2</versions.openejb>
        <versions.tomee>7.0.2</versions.tomee>
        <versions.openjpa>2.4.1</versions.openjpa>
        <versions.myface>2.2.10</versions.myface>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <!-- Dependencies for the OpenEJB framework (provided at runtime by the app server) -->
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>javaee-api</artifactId>
            <version>${versions.javaee}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>openejb-core</artifactId>
            <version>${versions.openejb}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>tomee-embedded</artifactId>
            <version>${versions.tomee}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Dependency to integrate REST clients (order matters for CXF) (provided) -->
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>openejb-cxf</artifactId>
            <version>${versions.openejb}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>openejb-cxf-rs</artifactId>
            <version>${versions.openejb}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Dependencies for the JSF framework (provided)-->
        <dependency>
            <groupId>org.apache.myfaces.core</groupId>
            <artifactId>myfaces-api</artifactId>
            <version>${versions.myface}</version>
            <scope>provided</scope>
        </dependency>
        <!-- JSON dependency-->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${versions.json}</version>
        </dependency>
    </dependencies>

    <build>
    	<sourceDirectory>src/main/java</sourceDirectory>
   		<testSourceDirectory>src/test</testSourceDirectory>
        <plugins>
            <plugin> <!-- used to define level language 8 to use LocalDateTime -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${versions.maven-compiler}</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.tomee.maven</groupId>
                <artifactId>tomee-maven-plugin</artifactId>
                <version>${versions.tomee}</version>
                <configuration>
                    <!-- From TomEE to TomEE+ to support the web services stack -->
                    <tomeeClassifier>plus</tomeeClassifier>
                    <args>-Xmx512m -XX:PermSize=256m</args>
                    <deployOpenEjbApplication>true</deployOpenEjbApplication>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
